status_update moved to config

--- a/2_cursor_with_buffer/sample_config.yaml
+++ b/2_cursor_with_buffer/sample_config.yaml
@@ -9,9 +9,8 @@ producer_consumer:
 
 # Database updater configuration
 db_updater:
-  update_batch_size: 1000
   update_queue_size: 100
-  update_interval_seconds: 5
+  update_status: false
 
 # ArsAdmin command configuration
 arsadmin:
