feat(sample_config.yaml): add optional timeout_seconds field for configurable timeout settings in the configuration file

--- a/2_cursor_with_buffer/sample_config.yaml
+++ b/2_cursor_with_buffer/sample_config.yaml
@@ -20,3 +20,6 @@ arsadmin:
   password: null  # Optional, can be null/omitted
   od_inst: "od_instance_name"
   base_dir: "/path/to/base/directory"
+
+  # Optional timeout in seconds (null means no timeout)
+  timeout_seconds: null  # Set to a number like 3600 for a 1-hour timeout
