refactor(db2_processor.py): improve logging configuration by creating handler instances and setting formatters for better readability chore(db2_processor.py): remove unnecessary configuration logging and adjust metrics monitoring interval for better performance fix(db2_processor.py): rename AGID_NAME to AGID_NAME_SRC for clarity in data processing feat(db2_processor.py): increase number of consumers and queue size in configuration for improved processing capacity fix(sample_config.yaml): update database configuration format for consistency and clarity fix(sample_config.yaml): increase command_max_objects limit to allow for larger batch processing

--- a/2_cursor_with_buffer/sample_config.yaml
+++ b/2_cursor_with_buffer/sample_config.yaml
@@ -1,11 +1,12 @@
 # Database configuration
-database: "MY_DB"
+database:
+  database: "MY_DB"
 
 # Producer, Consumer threads configuration
 producer_consumer:
   read_batch_size: 50000
-  num_consumers: 8
-  consumers_queue_size: 16  # 2 * num_consumers
+  num_consumers: 50
+  consumers_queue_size: 100  # 2 * num_consumers
 
 # Database updater configuration
 db_updater:
@@ -14,7 +15,7 @@ db_updater:
 
 # ArsAdmin command configuration
 arsadmin:
-  command_max_objects: 1000
+  command_max_objects: 10000
   dir_max_elems: 32000
   user: "arsuser"
   password: null  # Optional, can be null/omitted
