feat(db2_processor.py): add DiskSpaceMonitor class to monitor disk space and terminate process if below threshold feat(db2_processor.py): update Config class to include monitoring parameters for metrics and disk space chore(sample_config.yaml): add monitoring configuration options for metrics interval, minimum disk space, and disk check interval

--- a/2_cursor_with_buffer/sample_config.yaml
+++ b/2_cursor_with_buffer/sample_config.yaml
@@ -22,5 +22,8 @@ arsadmin:
   od_inst: "od_instance_name"
   base_dir: "/path/to/base/directory"
 
-# Optional timeout in seconds (null means no timeout)
-timeout_seconds: null  # Set to a number like 3600 for a 1-hour timeout
+monitoring:
+  metrics_interval_seconds: 30
+  minimum_disk_space_percentage: 5
+  disk_interval_seconds: 5
+  timeout_seconds: null  # Optional timeout in seconds (null means no timeout)
