feat(db2_processor.py): add runtime statistics monitoring with configurable interval to enhance performance tracking chore(sample_config.yaml): update sample configuration to include runtime statistics interval for better usability

--- a/2_cursor_with_buffer/sample_config.yaml
+++ b/2_cursor_with_buffer/sample_config.yaml
@@ -26,4 +26,5 @@ monitoring:
   metrics_interval_seconds: 30
   minimum_disk_space_percentage: 5
   disk_interval_seconds: 5
+  runtime_statistics_interval: 300
   timeout_seconds: null  # Optional timeout in seconds (null means no timeout)
